--- a/ch1/index.html
+++ b/ch1/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="/favicon.png">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/monokai-sublime.min.css">
-    <link rel="stylesheet" href="/static/main.css?230901">
+    <link rel="stylesheet" href="/static/highlight/monokai.min.css">
+    <link rel="stylesheet" href="/static/main.css?230920">
     <link rel="canonical" href="https://pinkcloverz.github.io/">
 </head>
 
@@ -62,9 +62,9 @@
 
 <script src="/static/jquery.min.js"></script>
 <script src="/static/bootstrap.bundle.min.js"></script>
-<script src="/static/highlight.min.js"></script>
+<script src="/static/highlight/highlight.min.js"></script>
 <script src="/static/clipboard.min.js"></script>
-<script> hljs.initHighlightingOnLoad(); </script>
+<script> hljs.highlightAll(); </script>
 <script src="/static/main.js"></script>
 </body>
 </html>
