--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="stylesheet" href="/static/bootstrap.min.css">
     <link rel="stylesheet" href="/static/fontawesome.min.css">
-    <link rel="stylesheet" href="/static/main.css?230901">
+    <link rel="stylesheet" href="/static/main.css?230920">
     <link rel="canonical" href="https://pinkcloverz.github.io/">
 </head>
 <body>
@@ -25,7 +25,7 @@
                     <li class="nav-item"><a class="nav-link" href="https://mail.google.com/" target="_blank" rel="noopener noreferrer">Gmail</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://replit.com/@PinkClover/cloverpy" target="_blank" rel="noopener noreferrer">clover.py</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://replit.com/" target="_blank" rel="noopener noreferrer">Replit</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://www.programiz.com/" target="_blank" rel="noopener noreferrer">Programiz</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.udemy.com/" target="_blank" rel="noopener noreferrer">Udemy</a></li>
                 </ul>
             </div>
         </div>
@@ -34,12 +34,9 @@
     <div id="home" class="jumbotron-main">
         <div class="container">
             <div class="row text-center">
-                <div class="col-lg-4">
-                    <h1 class="mt-lg-5">Clover 的程語課</h1>
-                    <p class="lead">Learning Coding with Clover</p>
-                </div>
-                <div class="col-lg-4">
-                    <img src="/static/img/clover.png" alt="Clover" class="mb-3 img-clover rounded-circle">
+                <div class="col-lg-12">
+                    <img src="/static/img/clover.png" alt="Clover" class="mt-2 mb-3 img-clover rounded-circle">
+                    <h1 class="mt-2 mb-3">Clover 的程語課</h1>
                 </div>
 
             </div>
@@ -47,47 +44,41 @@
     </div>
     <div class="container">
         <div id="python-abc123" class="section-lang">
-            <h2 class="my-5 text-center d-grid">
-                <a class="btn btn-lg font-lg btn-udemy py-3" target="_blank"
-                   href="#link">
-                   和 Clover 一起學 Python
-                </a>
-            </h2>
             <div class="row text-center courses btn-block">
                 <div class="col-lg-4 col-sm-6">
                     <a target="_self" href="/ch1/" class="mt-4 p-3 btn btn-lg btn-part1">
                         <i class="fa-solid fa-pen-ruler fa-3x mt-3"></i>
-                        <p class="mt-4">1 資料和運算</p>
+                        <p class="mt-2">1 資料和運算</p>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a target="_self" href="/ch1/" class="mt-4 p-3 btn btn-lg btn-part1">
                         <i class="fa-solid fa-compass fa-3x mt-3"></i>
-                        <p class="mt-4">2 決策和迴圈</p>
+                        <p class="mt-2">2 決策和迴圈</p>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a target="_self" href="/ch1/" class="mt-4 p-3 btn btn-lg btn-part1">
                         <i class="fa-solid fa-laptop-file fa-3x mt-3"></i>
-                        <p class="mt-4">3 輸入和輸出</p>
+                        <p class="mt-2">3 輸入和輸出</p>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a target="_self" href="/ch1/" class="mt-4 p-3 btn btn-lg btn-part1">
                         <i class="fa-solid fa-file-lines fa-3x mt-3"></i>
-                        <p class="mt-4">4 文件和結構</p>
+                        <p class="mt-2">4 文件和結構</p>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a target="_self" href="/ch1/" class="mt-4 p-3 btn btn-lg btn-part1">
                         <i class="fa-solid fa-bug fa-3x mt-3"></i>
-                        <p class="mt-4">5 疑難和錯誤</p>
+                        <p class="mt-2">5 疑難和錯誤</p>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a target="_self" href="/ch1/" class="mt-4 p-3 btn btn-lg btn-part1">
                         <i class="fa-solid fa-screwdriver-wrench fa-3x mt-3"></i>
-                        <p class="mt-4">6 模組和工具</p>
+                        <p class="mt-2">6 模組和工具</p>
                     </a>
                 </div>
             </div>
